# migadu-api-client

./: Cargo.toml  README.md
examples/: README.md  create-new-mailbox.sh  list-all-mailboxes.sh  list-specific-mailbox.sh
src/: api.rs  lib.rs  main.rs
src/api/: alias.rs  identity.rs  mailbox.rs  rewrite.rs
tests/: basic.rs
