[package]
name = "migadu"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1.17.0", features = ["full"]}
clap        = { version = "3.1.6", features = ["derive", "regex"] }
reqwest     = { version = "0.11", features = ["json"] }
chrono      = { version = "0.4.19", features = ["serde"] }
chrono-tz   = { version = "0.6.1" }
dotenv      = { version = "0.15.0" }
serde       = { version = "1.0.136", features = ["derive"] }
serde_json  = { version = "1.0.79" }
mockito     = { version = "0.31.0" }